--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: jekyll-theme-cayman
+
+# Setup
+title:   SCRUM Club
+tagline: Software/Tools for Scientific Computing and Research @ UM Club
+
+# About/contact
+author:
+  name: Wolfgang Viechtbauer
+url: http://www.wvbauer.com
